# ai-workflow-demo

./: .gitignore  README.md  pyproject.toml
scripts/: generate_sample_data.py
src/order_pipeline/: __init__.py  __main__.py  cli.py  exporters.py  loaders.py  mail.py  models.py  pipeline.py
tests/: test_loaders.py  test_mail.py  test_pipeline.py
