[project]
name = "order-pipeline"
version = "0.1.0"
description = "複数ECモールの受注CSVを統合し、発送対象抽出・出荷リスト・メール文面生成までを自動化するデモ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
order-pipeline = "order_pipeline.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/order_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
